[package]
name = "rag-binaries"
version.workspace = true
edition.workspace = true

[dependencies]
# Core async runtime
tokio.workspace = true

# Web server framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "timeout"] }

# CLI framework
clap.workspace = true

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde.workspace = true
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "rag-server"
path = "src/server.rs"

[[bin]]
name = "rag-cli"
path = "src/cli.rs"
