[package]
name = "rag-redis-system"
version.workspace = true
edition.workspace = true
authors = ["RAG-Redis Development Team"]
description = "High-performance local RAG system with Redis backend and MCP interface"
license = "MIT"

# This package is now part of the unified workspace at the repository root

[dependencies]
# For ONNX parsing - disabled due to dependency conflicts
# wonnx = { version = "0.2.0", optional = true }
# Core async runtime
tokio.workspace = true
async-trait = "0.1"

# Redis integration
redis.workspace = true
bb8 = "0.9"
bb8-redis = "0.24"

# Vector operations and similarity search
ndarray = "0.16"
hnsw = "0.11"
simsimd = { version = "5.4", optional = true }
faiss = { version = "0.12", optional = true }

# Document processing
tiktoken-rs = "0.6"
pulldown-cmark = "0.12"
scraper = "0.21"
pdf-extract = { version = "0.7", optional = true }
tantivy = { version = "0.22", optional = true }
regex = "1.10"

# Serialization
serde.workspace = true
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"

# Web and API clients
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies", "stream"] }
governor = "0.7"
nonzero_ext = "0.3"
url = "2.5"
urlencoding = "2.1"

# Web server framework (conditional on server feature)
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "timeout"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }

# CLI framework (conditional on cli feature)
clap = { workspace = true, optional = true }
tokio-util = { version = "0.7", optional = true }

# Error handling and logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# FFI for C++ integration
libc = "0.2"
cbindgen = { version = "0.27", optional = true }

# Utilities
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.1"
lru = "0.12"
bytes = "1.8"
futures = "0.3"
rayon = "1.10"
md5 = "0.7"
flate2 = "1.0"
sha2 = "0.10"
walkdir = "2.4"
glob = "0.3"

# Embedding models (optional)
candle-core = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }

# Metrics and monitoring
prometheus = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
lz4 = "1.28.1"
sys-info = "0.9.1"
num_cpus = "1.17.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
mockall = "0.13"
tempfile = "3.14"
wiremock = "0.6"

[build-dependencies]
cbindgen = { version = "0.27", optional = true }

[features]
default = ["simsimd"]
minimal = []
server = ["axum", "tower", "tower-http", "hyper"]
cli = ["clap", "tokio-util"]
gpu = ["candle-core", "candle-transformers"]
# wonnx = ["dep:wonnx"]  # Disabled due to dependency conflicts
metrics = ["prometheus", "opentelemetry", "opentelemetry-otlp"]
ffi = ["cbindgen"]
search = ["tantivy"]
pdf = ["pdf-extract"]
memory-optimized = ["simsimd", "cli"]
full = ["server", "cli", "metrics", "search", "pdf"]
# Note: gpu, onnx, ffi, and faiss features are excluded due to dependency conflicts


[[bin]]
name = "rag-redis-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "rag-redis-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[bench]]
name = "vector_search"
harness = false

[[bench]]
name = "document_processing"
harness = false

[[example]]
name = "research_demo"
path = "examples/research_demo.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "standalone_demo"
path = "examples/standalone_demo.rs"
