[package]
name = "rust-rag-extensions"
version = "0.1.0"
edition = "2021"
authors = ["RAG Extensions Development Team"]
license = "MIT"
description = "High-performance Redis-backed RAG (Retrieval-Augmented Generation) system"
repository = "https://github.com/david-t-martel/llm-stats"
homepage = "https://github.com/david-t-martel/llm-stats"
readme = "RAG_ARCHITECTURE.md"
keywords = ["rag", "redis", "vector-search", "nlp", "embeddings"]
categories = ["science", "text-processing", "database"]
rust-version = "1.75.0"

[lib]
name = "rag_extensions"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = []
minimal = ["redis-backend"]
redis-backend = ["redis", "bb8", "bb8-redis"]
faiss-backend = ["faiss"]
transformers = ["candle-transformers", "tokenizers"]
pdf-support = ["pdf-extract"]
full-rag = ["transformers", "pdf-support", "faiss-backend", "zip", "csv"]
simd = ["simsimd"]
parallel = ["rayon"]
python-bindings = ["pyo3"]
memory-optimized = ["redis-backend", "simd"]

[dependencies]
# Core async runtime and concurrency
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
rayon = { version = "1.10", optional = true }
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
parking_lot = "0.12"
dashmap = "6.1"

# Redis integration
redis = { version = "0.32", features = ["aio", "tokio-comp", "connection-manager", "json", "cluster-async"], optional = true }
bb8 = { version = "0.9", optional = true }
bb8-redis = { version = "0.24", optional = true }

# HTTP client for research
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "rustls-tls"] }

# Serialization and data formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# Math and ML operations
ndarray = { version = "0.16", features = ["rayon", "serde"] }
ndarray-linalg = "0.16"
num-traits = "0.2"
num-complex = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }

# Vector operations and similarity search
hnsw = "0.11"
simsimd = { version = "5.4", optional = true }
faiss = { version = "0.12", optional = true }

# Document processing and text
tiktoken-rs = "0.6"
pulldown-cmark = "0.12"
scraper = "0.21"
pdf-extract = { version = "0.7", optional = true }
regex = "1.10"
unicode-segmentation = "1.10"
zip = { version = "0.6.6", optional = true }
csv = { version = "1.3.0", optional = true }

# Tokenization
tokenizers = { version = "0.15", optional = true }

# Candle for ML transformers
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1", optional = true }

# Error handling and logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
once_cell = "1.20"
bytes = "1.8"
md5 = "0.7"

# Compression
flate2 = "1.0"
zstd = "0.13"
lz4 = "1.28.1"
lz4_flex = "0.11"
base64 = "0.22"

# Performance and SIMD optimizations
wide = "0.7"
bytemuck = { version = "1.16", features = ["derive"] }
memchr = "2.7"
smallvec = "1.13"
tinyvec = { version = "1.6", features = ["alloc"] }
ahash = "0.8"
fnv = "1.0"

# Memory management and allocation
bumpalo = { version = "3.14", features = ["collections"] }
typed-arena = "2.0"
lru = "0.12"

# PyO3 for Python bindings (optional)
pyo3 = { version = "0.22.6", features = ["extension-module", "macros"], optional = true }

# Configuration
config = "0.14"
toml = "0.8"

# Web-related
eventsource-stream = "0.2"
urlencoding = "2.1"

# Rate limiting
governor = "0.7"
nonzero_ext = "0.3"

# System info
sys-info = "0.9.1"
num_cpus = "1.17.0"

# Time utilities
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.14"
wiremock = "0.6"

[build-dependencies]
# FFI C header generation
cbindgen = "0.27"

[[example]]
name = "rag_system_demo"
path = "examples/rag_system_demo.rs"
required-features = ["redis-backend"]

# Benchmarks temporarily disabled for memory-optimized builds
# [[bench]]
# name = "vector_search"
# harness = false
# required-features = ["simd"]

# [[bench]]
# name = "document_processing"
# harness = false

# [[bench]]
# name = "redis_operations"
# harness = false
# required-features = ["redis-backend"]

# Profiles moved to workspace root

[profile.release-with-debug]
inherits = "release"
debug = 1
strip = "none"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.bench]
inherits = "release"
debug = 1

# Memory profiling profile
[profile.profiling]
inherits = "release"
debug = 1
strip = "none"

[package.metadata.docs.rs]
features = ["full-rag"]
rustdoc-args = ["--cfg", "docsrs"]
